--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+body {
+    background-color: #070707;
+}
+
+*{
+    font-family: "Gothic A1", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    scroll-behavior: smooth;
+}
